stderr
run
+- run exe zag
   +- install
      +- install zag
         +- compile exe zag Debug native 6 errors
/Users/dt/.local/share/zigup/0.15.2/files/lib/std/mem/Allocator.zig:164:41: error: access of union field 'pointer' while field 'optional' is active
    const info = @typeInfo(@TypeOf(ptr)).pointer;
                 ~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~
/Users/dt/.local/share/zigup/0.15.2/files/lib/std/builtin.zig:518:18: note: union declared here
pub const Type = union(enum) {
                 ^~~~~
referenced by:
    if: src/parser/expressions.zig:349:36
    parse: src/parser/parser.zig:478:20
    9 reference(s) hidden; use '-freference-trace=11' to see all references
src/parser/statements.zig:154:51: error: expected type 'mem.Allocator', found '*statement.Statement'
            errdefer if (@"else") |e| e.deinitPtr(e);
                                                  ^
/Users/dt/.local/share/zigup/0.15.2/files/lib/std/mem/Allocator.zig:1:1: note: struct declared here
//! The standard memory allocation interface.
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src/ast/statement.zig:131:60: note: parameter type declared here
    pub fn deinitPtr(self: *const Statement, alloc: std.mem.Allocator) void {
                                                    ~~~~~~~^~~~~~~~~~
src/parser/top_level_statements.zig:74:49: error: expected type '*array_list.Aligned(top_level_statement.TopLevelStatement.EnumDeclaration.Member,null)', found '*array_list.Aligned(top_level_statement.TopLevelStatement.FunctionDefinition,null)'
    errdefer utils.deinitArrayList(Type.Member, &methods, self.alloc);
                                                ^~~~~~~~
src/parser/top_level_statements.zig:74:49: note: pointer type child 'array_list.Aligned(top_level_statement.TopLevelStatement.FunctionDefinition,null)' cannot cast into pointer type child 'array_list.Aligned(top_level_statement.TopLevelStatement.EnumDeclaration.Member,null)'
/Users/dt/.local/share/zigup/0.15.2/files/lib/std/array_list.zig:606:12: note: struct declared here (2 times)
    return struct {
           ^~~~~~
src/utils.zig:91:48: note: parameter type declared here
pub fn deinitArrayList(comptime T: type, list: *std.ArrayList(T), alloc: std.mem.Allocator) void {
                                               ^~~~~~~~~~~~~~~~~
src/parser/top_level_statements.zig:74:49: error: expected type '*array_list.Aligned(top_level_statement.TopLevelStatement.CompoundTypeDeclaration(.struct).Member,null)', found '*array_list.Aligned(top_level_statement.TopLevelStatement.FunctionDefinition,null)'
    errdefer utils.deinitArrayList(Type.Member, &methods, self.alloc);
                                                ^~~~~~~~
src/parser/top_level_statements.zig:74:49: note: pointer type child 'array_list.Aligned(top_level_statement.TopLevelStatement.FunctionDefinition,null)' cannot cast into pointer type child 'array_list.Aligned(top_level_statement.TopLevelStatement.CompoundTypeDeclaration(.struct).Member,null)'
/Users/dt/.local/share/zigup/0.15.2/files/lib/std/array_list.zig:606:12: note: struct declared here (2 times)
    return struct {
           ^~~~~~
src/utils.zig:91:48: note: parameter type declared here
pub fn deinitArrayList(comptime T: type, list: *std.ArrayList(T), alloc: std.mem.Allocator) void {
                                               ^~~~~~~~~~~~~~~~~
src/parser/top_level_statements.zig:74:49: error: expected type '*array_list.Aligned(top_level_statement.TopLevelStatement.CompoundTypeDeclaration(.union).Member,null)', found '*array_list.Aligned(top_level_statement.TopLevelStatement.FunctionDefinition,null)'
    errdefer utils.deinitArrayList(Type.Member, &methods, self.alloc);
                                                ^~~~~~~~
src/parser/top_level_statements.zig:74:49: note: pointer type child 'array_list.Aligned(top_level_statement.TopLevelStatement.FunctionDefinition,null)' cannot cast into pointer type child 'array_list.Aligned(top_level_statement.TopLevelStatement.CompoundTypeDeclaration(.union).Member,null)'
/Users/dt/.local/share/zigup/0.15.2/files/lib/std/array_list.zig:606:12: note: struct declared here (2 times)
    return struct {
           ^~~~~~
src/utils.zig:91:48: note: parameter type declared here
pub fn deinitArrayList(comptime T: type, list: *std.ArrayList(T), alloc: std.mem.Allocator) void {
                                               ^~~~~~~~~~~~~~~~~
src/parser/top_level_statements.zig:220:19: error: root source file struct 'utils' has no member named 'deiniSlice'
    errdefer utils.deiniSlice(ast.Statement, body, self.alloc);
             ~~~~~^~~~~~~~~~~
src/utils.zig:1:1: note: struct declared here
const std = @import("std");
^~~~~
error: the following command failed with 6 compilation errors:
/Users/dt/.local/share/zigup/0.15.2/files/zig build-exe -ODebug --dep build_options --dep lexer --dep parser --dep compiler --dep utils --dep cli --dep pretty -Mroot=/Users/dt/coding/git/zag/src/main.zig -Mbuild_options=.zig-cache/c/231f4f77aeb4e737dbca3aecb43b0d8d/options.zig -ODebug --dep utils -Mlexer=/Users/dt/coding/git/zag/src/lexer.zig -ODebug --dep utils --dep ast --dep lexer -Mparser=/Users/dt/coding/git/zag/src/parser/parser.zig -ODebug --dep build_options --dep utils --dep lexer --dep ast --dep parser --dep pretty -Mcompiler=/Users/dt/coding/git/zag/src/compiler/compiler.zig -ODebug -Mutils=/Users/dt/coding/git/zag/src/utils.zig -ODebug -Mcli=/Users/dt/.cache/zig/p/cli-0.10.0-2eKe_5kEAQBeHqKxUHNTGnETzu81rqKWwT1WPt1jXBt0/src/root.zig -ODebug -Mpretty=/Users/dt/.cache/zig/p/pretty-0.10.6-Tm65r6lPAQCBxgwzehYPeqsCXQDT9kt2ktJuO-2tRfE6/src/pretty.zig -ODebug --dep utils --dep lexer -Mast=/Users/dt/coding/git/zag/src/ast/ast.zig --cache-dir .zig-cache --global-cache-dir /Users/dt/.cache/zig --name zag --zig-lib-dir /Users/dt/.local/share/zigup/0.15.2/files/lib/ --listen=-

Build Summary: 3/10 steps succeeded; 1 failed
run transitive failure
+- run exe zag transitive failure
   +- compile exe zag Debug native 6 errors
   +- install transitive failure
      +- install-bin transitive failure
      |  +- install zag transitive failure
      |     +- compile exe zag Debug native (+1 more reused dependencies)
      +- install zag transitive failure
         +- compile exe zag Debug native (+1 more reused dependencies)

error: the following build command failed with exit code 1:
.zig-cache/o/94a13e852a7ca184476c895876861a73/build /Users/dt/.local/share/zigup/0.15.2/files/zig /Users/dt/.local/share/zigup/0.15.2/files/lib /Users/dt/coding/git/zag .zig-cache /Users/dt/.cache/zig --seed 0x7e4bb48e -Z7e1940ec2911d51b run -- build
